cabal-version:      3.0
name:               spelling-book-generator
version:            0.1.0.0
synopsis:           Spelling book generator
license:            MIT
license-file:       LICENSE
author:             Ismael Carlos Velten
maintainer:         ismaelcarlosvelten@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  SpellingBookGenerator
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spelling-book-generator-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        spelling-book-generator,
        tasty,
        tasty-hunit
